--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -603,18 +603,56 @@ video {
   color: hsl(249 10% 26% / 0.9);
 }
 
-.input-form:focus-within {
+.input-form:focus {
   --tw-border-opacity: 1;
   border-color: hsl(249 10% 26% / var(--tw-border-opacity));
-}
-
-.input-form:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
 
 @media (min-width: 768px) {
   .input-form {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
+.input-error {
+  width: 100%;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: hsl(0 100% 74% / var(--tw-border-opacity));
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: hsl(0 100% 74% / var(--tw-text-opacity));
+}
+
+.input-error::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: hsl(0 100% 74% / var(--tw-text-opacity));
+}
+
+.input-error::placeholder {
+  --tw-text-opacity: 1;
+  color: hsl(0 100% 74% / var(--tw-text-opacity));
+}
+
+.input-error:focus {
+  --tw-border-opacity: 1;
+  border-color: hsl(0 100% 74% / var(--tw-border-opacity));
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+@media (min-width: 768px) {
+  .input-error {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
@@ -699,6 +737,14 @@ video {
   inset-inline-end: 0.25rem;
 }
 
+.right-5 {
+  right: 1.25rem;
+}
+
+.top-\[14px\] {
+  top: 14px;
+}
+
 .isolate {
   isolation: isolate;
 }
@@ -766,14 +812,6 @@ video {
 
 .mt-2 {
   margin-top: 0.5rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
 }
 
 .box-border {
@@ -2136,21 +2174,12 @@ video {
   font-size: 12px;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
 
 .font-semibold {
   font-weight: 600;
-}
-
-.font-light {
-  font-weight: 300;
 }
 
 .uppercase {
@@ -2622,6 +2651,17 @@ video {
 
 .forced-color-adjust-none {
   forced-color-adjust: none;
+}
+
+.error-txt {
+  margin-top: 0.25rem;
+  text-align: right;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 300;
+  font-style: italic;
+  --tw-text-opacity: 1;
+  color: hsl(0 100% 74% / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
