--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1948,9 +1948,8 @@ video {
   background-color: hsl(248 32% 49% / var(--tw-bg-opacity));
 }
 
-.bg-Green {
-  --tw-bg-opacity: 1;
-  background-color: hsl(154 59% 51% / var(--tw-bg-opacity));
+.bg-Green\/80 {
+  background-color: hsl(154 59% 51% / 0.8);
 }
 
 .bg-Red {
@@ -1966,6 +1965,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-Green {
+  --tw-bg-opacity: 1;
+  background-color: hsl(154 59% 51% / var(--tw-bg-opacity));
 }
 
 .bg-intro-mobile {
@@ -2313,6 +2317,10 @@ video {
 .subpixel-antialiased {
   -webkit-font-smoothing: auto;
   -moz-osx-font-smoothing: auto;
+}
+
+.opacity-80 {
+  opacity: 0.8;
 }
 
 .bg-blend-normal {
